--- a/index.html
+++ b/index.html
@@ -5,78 +5,108 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Odin Landing Page</title>
 		<link rel="stylesheet" href="./styles/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,300&display=swap"
+			rel="stylesheet" />
 	</head>
 	<body>
-		<div class="header">
-			<h1>Header Logo</h1>
-			<ul>
-				<li>header link one</li>
-				<li>header link two</li>
-				<li>header link three</li>
-			</ul>
-		</div>
-		<main>
-			<section class="hero">
-				<div class="content">
-					<h1>This website is awesome</h1>
-					<p>
-						This website has some subtext that goes here under the main file.
-						It's a smaller font and the color is lower contrast.
-					</p>
-					<button>Sign up</button>
-				</div>
-			</section>
-			<section class="information">
-				<h2>Some random information</h2>
-				<div class="cardbox">
-					<card>
-						<div class="box"></div>
-						<div class="card-info">
-							this is some subtext under an illustration or image
-						</div>
-					</card>
-					<card>
-						<div class="box"></div>
-						<div class="card-info">
-							this is some subtext under an illustration or image
-						</div>
-					</card>
-					<card>
-						<div class="box"></div>
-						<div class="card-info">
-							this is some subtext under an illustration or image
-						</div>
-					</card>
-					<card>
-						<div class="box"></div>
-						<div class="card-info">
-							this is some subtext under an illustration or image
-						</div>
-					</card>
-				</div>
-			</section>
-			<section class="testimonial">
-				<figure>
-					<blockquote>
-						This is an inspiring quote, or a testimonial from a customer. Maybe
-						it's just filling up space, or maybe people will actually read it.
-						Who knows? All I know this that it looks nice.
-					</blockquote>
-					<figcaption>-Thor, God of Thunder</figcaption>
-				</figure>
-			</section>
-			<section class="call-to-action">
-				<div>
-					<div>
-						<h2>Call to action! It's time!</h2>
-						<p>Sign up for our product by clicking that button over there!</p>
+		<header class="header">
+			<div class="container">
+				<nav class="nav">
+					<h1 class="logo">Header Logo</h1>
+					<ul class="nav-links secondary">
+						<li><a href="#">header link one</a></li>
+						<li><a href="#">header link two</a></li>
+						<li><a href="#">header link three</a></li>
+					</ul>
+				</nav>
+
+				<section class="hero">
+					<div class="content">
+						<h1 class="hero-text">This website is awesome</h1>
+						<p class="secondary">
+							This website has some subtext that goes here under the main file.
+							It's a smaller font and the color is lower contrast.
+						</p>
+						<button>Sign up</button>
 					</div>
-					<button>Sign up</button>
+					<div class="placeholder">this is a placeholder for an image</div>
+				</section>
+			</div>
+		</header>
+
+		<main>
+			<section class="information">
+				<div class="container">
+					<h2 class="info-heading">Some random information</h2>
+
+					<div class="cardbox">
+						<div class="card">
+							<div class="box"></div>
+							<div class="card-info">
+								this is some subtext under an illustration or image
+							</div>
+						</div>
+
+						<div class="card">
+							<div class="box"></div>
+							<div class="card-info">
+								this is some subtext under an illustration or image
+							</div>
+						</div>
+
+						<div class="card">
+							<div class="box"></div>
+							<div class="card-info">
+								this is some subtext under an illustration or image
+							</div>
+						</div>
+
+						<div class="card">
+							<div class="box"></div>
+							<div class="card-info">
+								this is some subtext under an illustration or image
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="testimonial">
+				<div class="container">
+					<figure>
+						<blockquote class="testimonial-text">
+							This is an inspiring quote, or a testimonial from a customer.
+							Maybe it's just filling up space, or maybe people will actually
+							read it. Who knows? All I know is that it looks nice.
+						</blockquote>
+						<figcaption class="testimonial-attribution">
+							-Thor, God of Thunder
+						</figcaption>
+					</figure>
+				</div>
+			</section>
+
+			<section class="cta">
+				<div class="container">
+					<div class="cta-content">
+						<div>
+							<h2>Call to action! It's time!</h2>
+							<p class="secondary">
+								Sign up for our product by clicking that button over there!
+							</p>
+						</div>
+						<button class="cta-button">Sign up</button>
+					</div>
 				</div>
 			</section>
 		</main>
-		<footer>
-			<p>Copyright &copy; The Odin Project 2021</p>
+		<footer class="footer">
+			<div class="container">
+				<p>Copyright &copy; The Odin Project 2021</p>
+			</div>
 		</footer>
 	</body>
 </html>
